extends Node2D

@onready var dive = $Dive
@onready var diveHop = $DiveHop
@onready var jump = $Jump
@onready var land = $Land
@onready var dash = $Dash
@onready var dairLand = $DownAirLand
@onready var dairStart = $DownAirStart
@onready var dairFire = $DownFire
@onready var wallCling = $WallCling
@onready var slide = $Slide
@onready var skid = $Skid
@onready var death = $Death
@onready var damage = $Damage
@onready var checkpoint = $Checkpoint
@onready var finish = $Finish
@onready var breakWall = $Break
@onready var coin = $Coin
@onready var song1 = $Song1
@onready var song2 = $Song2
@onready var song3 = $Song3
@onready var menu = $Menu
@onready var portal = $Portal
@onready var end = $EnterEnd
@onready var perfect = $DiveSave
@onready var reset = $Reset
